# take-out-guys

./: .dockerignore  .env.agent.example  .gitignore  README.md  docker-compose.agent.yml
admin-web/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  (+1 more)
agent-service/: .env.example  AGENTS.md  Dockerfile  pyproject.toml  start.ps1
agent-service/app/: __init__.py  confirmations.py  dependencies.py  main.py
agent-service/app/api/: admin_chat.py  health.py  threads.py  user_chat.py
agent-service/app/clients/: __init__.py  spring_internal.py
agent-service/app/core/: config.py
agent-service/app/graphs/: __init__.py  admin_operations.py  user_support.py
agent-service/app/observability/: __init__.py  metrics.py
agent-service/app/prompts/: __init__.py  admin.py  user.py
agent-service/app/rag/: embeddings.py  loader.py  models.py  retriever.py  store.py
agent-service/app/schemas/: admin_tools.py  chat.py  confirmation.py  health.py  internal_api.py  knowledge.py  user_tools.py
agent-service/app/security/: __init__.py  actor.py  service_auth.py
agent-service/app/tools/: __init__.py  addresses.py  admin_mutations.py  admin_queries.py  business_overview.py  cart.py  coupons.py  knowledge_search.py  menu_search.py  order_detail.py  recent_orders.py  registry.py  review_draft.py  sensitive_words.py  shop_status.py  user_mutations.py
agent-service/evals/: generated_rag_cases.jsonl  rag_cases.jsonl  tool_routing_cases.jsonl  tool_test_matrix.json
agent-service/scripts/: evaluate_release.py  evaluate_tool_routing.py  ingest_knowledge.py
agent-service/tests/: test_admin_chat.py  test_admin_operations_graph.py  test_admin_tools.py  test_confirmations.py  test_health.py  test_rag_pipeline.py  test_service_auth.py  test_spring_internal_client.py  test_threads.py  test_tool_quality_gate.py  test_tool_schema.py  test_user_chat.py  test_user_support_graph.py
(+345 files in other folders)
