[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "takeout-agent-service"
version = "0.1.0"
description = "FastAPI + LangChain Agent microservice for Takeout Guys."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "httpx>=0.27,<0.28",
  "structlog>=24.2,<25",
  "langchain>=0.2,<0.3",
  "langgraph>=0.2,<0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<0.24",
  "ruff>=0.5,<0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
