[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "takeout-agent-service"
version = "0.1.0"
description = "FastAPI + LangChain Agent microservice for Takeout Guys."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "httpx>=0.28.1,<0.29",
  "structlog>=24.2,<25",
  "langchain>=1.3.13,<2",
  "langchain-core>=1.4.9,<2",
  "langchain-openai>=1.3.5,<2",
  "langgraph>=1.2.9,<2",
  "langgraph-checkpoint-sqlite>=3.0.1,<4",
  "langgraph-checkpoint-postgres>=3.0,<4",
  "psycopg[binary]>=3.2,<4",
  "openpyxl>=3.1,<4",
  "pypdf>=5.0,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<0.24",
  "ruff>=0.5,<0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
